change icon style

--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <link rel="stylesheet" href="../css/main.css" />
 
@@ -31,7 +31,9 @@
           />
           <div>
             <h2 class="name">Azat Kashapov</h2>
-            <div class="position">Software Engineer</div>
+            <div class="position">Software Engineer
+              <img src="../github.svg" alt="" width="24" height="24">
+            </div>
           </div>
         </div>
         <hr />
@@ -85,23 +87,26 @@
       </section>
       <section class="description">
         <p>
-What I can offer:<br>
-<br>
-Awesome layout;<br>
-Clean, neat Vue code (strictly following the Vue style guide);<br>
-Proper TypeScript (won't use 'any' everywhere);<br>
-Quality refactoring for your legacy code;<br>
-I can make Web Components, Web Extensions, and npm library (components, any reusable code)<br>
-Clear and transparent, friendly communication;<br>
-If I don’t know something, I learn it until sparks fly;<br>
-Realistic time estimates for tasks;<br>
-<br>
-What I'm looking for:<br>
-<br>
-A product that the team is passionate about, beloved and well-maintained;<br>
-A great team, without quarrels and conflicts;<br>
-Remote work;<br>
-In summary, I want a project where I can truly invest myself and which will be interesting to work on.<br>
+          What I can offer:<br />
+          <br />
+          Awesome layout;<br />
+          Clean, neat Vue code (strictly following the Vue style guide);<br />
+          Proper TypeScript (won't use 'any' everywhere);<br />
+          Quality refactoring for your legacy code;<br />
+          I can make Web Components, Web Extensions, and npm library
+          (components, any reusable code)<br />
+          Clear and transparent, friendly communication;<br />
+          If I don’t know something, I learn it until sparks fly;<br />
+          Realistic time estimates for tasks;<br />
+          <br />
+          What I'm looking for:<br />
+          <br />
+          A product that the team is passionate about, beloved and
+          well-maintained;<br />
+          A great team, without quarrels and conflicts;<br />
+          Remote work;<br />
+          In summary, I want a project where I can truly invest myself and which
+          will be interesting to work on.<br />
         </p>
       </section>
       <section class="experience">
@@ -110,7 +115,7 @@ In summary, I want a project where I can truly invest myself and which will be i
           <div class="job-head">
             <div class="job-head__line">
               <div>Frontend Engineer</div>
-              <div>
+              <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">Tailwind</span>
@@ -119,30 +124,31 @@ In summary, I want a project where I can truly invest myself and which will be i
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <span>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                ForestVPN
-              </span>
-              <span>
+                <b>ForestVPN</b>
+              </div>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
                 </svg>
                 2022 - current
-              </span>
+              </div>
             </div>
           </div>
           <div class="job-description">
             Created website (dashboard) for users. Standard set: tables, charts,
             etc. An interesting experience for me to create a multilingual site
-            (including RTL) Created browser extension VPN app (similar to a
-            mobile app). Incredibly interesting. Created website for cloud
-            services VPN. Here I had to become a product owner in addition. I
-            started the work without a design layout, but just with an idea.
-            There seems to be no such functionality (we could not find it), I
-            came up with a functional from zero. Made a lot of mistakes, but
-            achieved the result.
+            (including RTL)<br />
+            Created browser extension VPN app (similar to a mobile app).
+            Incredibly interesting.<br />
+            Created website for cloud services VPN. Here I had to become a
+            product owner in addition. I started the work without a design
+            layout, but just with an idea. There seems to be no such
+            functionality (we could not find it), I came up with a functional
+            from zero. Made a lot of mistakes, but achieved the result.
           </div>
         </div>
         <hr class="hr" />
@@ -150,7 +156,7 @@ In summary, I want a project where I can truly invest myself and which will be i
           <div class="job-head">
             <div class="job-head__line">
               <div>Full-stack Engineer</div>
-              <div>
+              <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">PHP</span>
@@ -158,24 +164,25 @@ In summary, I want a project where I can truly invest myself and which will be i
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <span>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                Letteros
-              </span>
-              <span>
+                <b>Letteros</b>
+              </div>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
                 </svg>
                 2021 - 2022
-              </span>
+              </div>
             </div>
           </div>
           <div class="job-description">
             Front: Based on legacy (Jquery, without ES5 features), and other
             references, I made a SPA email constructor-editor. Written in Vue2,
-            Vuetify, considering future migration to Vue3. Back: For 1/3 of
+            Vuetify, considering future migration to Vue3.<br>
+            Back: For 1/3 of
             tasks I write REST API on Yii2, for the remaining 2/3 I participate
             more with consultations, advice, code reviews and ideas. In general,
             the usual API, with local nuances, but without any special problems.
@@ -186,7 +193,7 @@ In summary, I want a project where I can truly invest myself and which will be i
           <div class="job-head">
             <div class="job-head__line">
               <div>Full-stack Engineer</div>
-              <div>
+              <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">Nuxt</span>
@@ -195,18 +202,18 @@ In summary, I want a project where I can truly invest myself and which will be i
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <span>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                2UIT
-              </span>
-              <span>
+                <b>2UIT</b>
+              </div>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
                 </svg>
                 2020 - 2021
-              </span>
+              </div>
             </div>
           </div>
           <div class="job-description">
@@ -218,7 +225,8 @@ In summary, I want a project where I can truly invest myself and which will be i
             of new ones, refactoring of both your own and someone else's code.
             The difficulties are mostly in a huge code base, a complex hierarchy
             of entities, well, you can say highload. Decision performance was
-            very important CRM development for lr-service.su. Something like
+            very important<br>
+            CRM development for lr-service.su. Something like
             "UBER" for masters of repair and installation of equipment Wrote the
             entire front in Nuxt, and most of the back end in Yii2. The back is
             generally a simple REST API, but there were non-trivial and
@@ -230,25 +238,25 @@ In summary, I want a project where I can truly invest myself and which will be i
           <div class="job-head">
             <div class="job-head__line">
               <div>Full-stack Engineer</div>
-              <div>
+              <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">PHP</span>
                 <span class="skill">MySQL</span>
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <span>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                Freelance
-              </span>
-              <span>
+                <b>Freelance</b>
+              </div>
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
                 </svg>
                 2018 - 2021
-              </span>
+              </div>
             </div>
           </div>
           <div class="job-description">
@@ -267,5 +275,20 @@ In summary, I want a project where I can truly invest myself and which will be i
       </section>
     </main>
     <script src="../js/main.js"></script>
+    <script>
+      const style = 'font-size:16px;';
+      console.log(`
+%c*******************************************************
+Hi,I am Azat Kashapov. Frontend Developer.
+
+I love working with Vue, Pinia, Tailwind, Nuxt, Typescript,
+WebSocket, GraphQL, TanStack Query, Web Extensions, Crypto,
+Node.js (Fastify, Express)
+
+If you have questions, pls text me https://t.me/ufaboy
+or https://www.linkedin.com/in/azat-kashapov/
+Have a nice day!
+*******************************************************`, style)
+    </script>
   </body>
 </html>
