--- a/ru/index.html
+++ b/ru/index.html
@@ -1,30 +1,286 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="" lang="en" itemtype="https://schema.org/Person">
+  <head>
+    <meta charset="utf-8" />
+    <title>Azat Kashapov</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8">
-  <title>Azat Kashapov</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="../css/main.css" />
 
-  <link rel="stylesheet" href="css/main.css">
+    <meta name="theme-color" content="#fafafa" />
+  </head>
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+  <body>
+    <main class="main">
+      <section class="bio">
+        <div class="profile">
+          <img
+            src="/img//avatar.png"
+            alt="Azat's Photo"
+            class="profile-photo"
+          />
+          <div>
+            <h2 class="name">Азат Кашапов</h2>
+            <div class="position">Software Engineer
+              <img src="../github.svg" alt="" width="24" height="24">
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="contact-info">
+          <div>
+            <svg class="icon" fill="none">
+              <use xlink:href="/img/iconSprite.svg#mail" />
+            </svg>
+            <a href="mailto:azat.developer@gmail.com" class="link"
+              >azat.developer@gmail.com</a
+            >
+          </div>
+          <div>
+            <svg class="icon" fill="none">
+              <use xlink:href="/img/iconSprite.svg#github" />
+            </svg>
+            <a href="https://github.com/ufaboy" class="link">ufaboy</a>
+          </div>
+          <div>
+            <svg class="icon" fill="none">
+              <use xlink:href="/img/iconSprite.svg#linkedin" />
+            </svg>
+            <a href="https://www.linkedin.com/in/azat-kashapov/" class="link"
+              >azat-kashapov</a
+            >
+          </div>
+          <div>
+            <svg class="icon" fill="none">
+              <use xlink:href="/img/iconSprite.svg#telegram" />
+            </svg>
+            <a href="https://t.me/ufaboy" class="link"
+              >@ufaboy</a
+            >
+          </div>
+          <div>
+            <svg class="icon" fill="none">
+              <use xlink:href="/img/iconSprite.svg#location" />
+            </svg>
+            Bar, Montenegro
+          </div>
+        </div>
+      </section>
+      <section class="skills">
+        <h3>Навыки</h3>
+        <div class="skill-list">
+          <span class="skill"> TypeScript </span>
+          <span class="skill"> Vue </span>
+          <span class="skill"> Nuxt </span>
+          <span class="skill"> Web Extensions </span>
+          <span class="skill"> Node.JS </span>
+          <span class="skill"> PHP </span>
+          <span class="skill"> Yii2 </span>
+          <span class="skill"> PWA </span>
+          <span class="skill"> MySQL </span>
+          <span class="skill"> PostgreSQL </span>
+          <span class="skill"> Docker </span>
+          <span class="skill"> GIT </span>
+        </div>
+      </section>
+      <section class="description">
+        <span>Что я могу дать:</span>
+        <ol>
+          <li>Крутую верстку;</li>
+          <li>Чистый, аккуратный Vue код (максимально по Vue style guide);</li>
+          <li>Норм Typescript (не налеплю вам везде any);</li>
+          <li>Годный рефакторинг вашему легаси;</li>
+          <li>Внятную и прозрачную, дружелюбную коммуникацию;</li>
+          <li>Что не умею, тому учусь так, что искры летят;</li>
+          <li>Адекватные оценки сроков выполнения задач;</li>
+          <li>Сделаю npm библиотеку для переиспользуемого кода;</li>
+          <li>Могу сделать Web Extension и Web Components;</li>
+        </ol>
+        <span>Что я могу дать:</span>
+        <ol>
+          <li>Продукт, за который радеет команда, любимый и пестуемый;</li>
+          <li>Славный коллектив;</li>
+          <li>Удаленку;</li>
+        </ol>
+        <p>В общем, хочу проект, в который смогу от души вложиться и на котором будет интересно работать.
+        </p>
+        </p>
+      </section>
+      <section class="experience">
+        <h3>Опыт</h3>
+        <div class="job">
+          <div class="job-head">
+            <div class="job-head__line">
+              <div>Frontend Engineer</div>
+              <div class="skill-set">
+                <span class="skill">Vue</span>
+                <span class="skill">TypeScript</span>
+                <span class="skill">Tailwind</span>
+                <span class="skill">Nuxt</span>
+                <span class="skill">Web Extensions</span>
+              </div>
+            </div>
+            <div class="job-head__line text-grey text-small">
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#work" />
+                </svg>
+                <b>ForestVPN</b>
+              </div>
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#calendar" />
+                </svg>
+                2022 - current
+              </div>
+            </div>
+          </div>
+          <div class="job-description">
+            Сделал сайт для покупки подписки на сервис, достаточно стандартная штука, личный кабинет, checkout, покупка, чарты, i18n (включая RTL арабский, иврит). Вдобавок сделал сайт для Cloud VPN (что то типа white label). Ну и самое интересное для меня сделал Web Extension для управления VPN из браузера.
+            Сделал также несколько side projects:
+            <ul>
+              <li>Сайт для поиска моделей OF (Nuxt3), довел до релиза, теперь ушло SEO оптимизаторам.</li>
+              <li>2 сайта для покупки крипты (Bind, Viking FEHU). Из интересного: работа с Metamask, и GraphQL</li>
+              <li>Поддержка сайта/админки 1.to в пуле Aleo. Добавил туда connect к Leo Wallet, и стандартные sign, payout (React)</li>
+              <li>Поддержка админки управления сервисом SMS рассылок(Nuxt2, я не знаю почему сайт подняли на нем.)</li>
+              <li>Сайт поисковик по книжкам, для привлечения трафика (Nuxt3)</li>
+            </ul>
+          </div>
+        </div>
+        <hr class="hr" />
+        <div class="job">
+          <div class="job-head">
+            <div class="job-head__line">
+              <div>Full-stack Engineer</div>
+              <div class="skill-set">
+                <span class="skill">Vue</span>
+                <span class="skill">TypeScript</span>
+                <span class="skill">PHP</span>
+                <span class="skill">PostgreSQL</span>
+              </div>
+            </div>
+            <div class="job-head__line text-grey text-small">
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#work" />
+                </svg>
+                <b>Letteros</b>
+              </div>
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#calendar" />
+                </svg>
+                2021 - 2022
+              </div>
+            </div>
+          </div>
+          <div class="job-description">
+            <b>Фронт</b>: На основе legacy (Jquery, без фич ES5), и иных референсов, сделал SPA конструктор-редактор писем. Написал на Vue2, Vuetify, с учетом будущей миграции на Vue3. Для приятной работы перенес часть функционала в WebWorker, сделал сохранение в IndexedDB промежуточных результатов, и навигацию по версиям документа.<br>
+            <b>Бэк</b>: На 1/3 задач пишу REST API на Yii2, на остальные 2/3 участвую больше консультациями, советами, ревью кода и идей. В целом обычный API, со локальными нюансами, но без особых заморочек.
+          </div>
+        </div>
+        <hr class="hr" />
+        <div class="job">
+          <div class="job-head">
+            <div class="job-head__line">
+              <div>Full-stack Engineer</div>
+              <div class="skill-set">
+                <span class="skill">Vue</span>
+                <span class="skill">TypeScript</span>
+                <span class="skill">Nuxt</span>
+                <span class="skill">PHP</span>
+                <span class="skill">MySQL</span>
+              </div>
+            </div>
+            <div class="job-head__line text-grey text-small">
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#work" />
+                </svg>
+                <b>2UIT</b>
+              </div>
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#calendar" />
+                </svg>
+                2020 - 2021
+              </div>
+            </div>
+          </div>
+          <div class="job-description">
+            Разработка CRM сети агентств недвижимости "Перспектива24".
+            Первый опыт с фронтом. Написал кучу страниц на Vue2. Интеграция различных сервисов (Yandex Map, и прочее)
+            Позже подключился к доработке бэка на Yii2. Доработка готовых моделей, контроллеров, вьюшек, создание новых, рефакторинг и своего и чужого кода. Сложности большей частью в огромной кодовой базе, сложной иерархией сущностей, ну и можно сказать highload. Производительность решений была очень важна
+            
+            Разработка CRM для lr-service.su. Что то вроде "UBER" для мастеров по ремонту и установке техники
+            Целиком написал фронт на Nuxt, и большую часть бэка на Yii2. Бэк в целом простой REST API, но были нетривиальные, и интересные задачи.
+          </div>
+        </div>
+        <hr class="hr" />
+        <div class="job">
+          <div class="job-head">
+            <div class="job-head__line">
+              <div>Full-stack Engineer</div>
+              <div class="skill-set">
+                <span class="skill">Vue</span>
+                <span class="skill">PHP</span>
+                <span class="skill">MySQL</span>
+              </div>
+            </div>
+            <div class="job-head__line text-grey text-small">
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#work" />
+                </svg>
+                <b>Freelance</b>
+              </div>
+              <div>
+                <svg class="icon" fill="none">
+                  <use xlink:href="../img/iconSprite.svg#calendar" />
+                </svg>
+                2018 - 2021
+              </div>
+            </div>
+          </div>
+          <div class="job-description">
+            Сперва заказы от знакомых, потом добавилась биржа.
+            Делал простые штуки, ибо мало что умел
+          </div>
+        </div>
+      </section>
+      <section class="education">
+        <h3>Образование</h3>
+        <div class="education-degree">
+          ФИРТ, Бизнес-информатика
+        </div>
+        <div class="education-school">Уфимский государственный авиационный технический университет, Уфа</div>
+      </section>
+    </main>
+    <script src="../js/main.js"></script>
+    <script>
+      const style = 'font-size:16px;';
+      console.log(`
+%c*******************************************************
+Hi,I am Azat Kashapov. Frontend Developer.
 
-<body>
+I love working with Vue, Pinia, Tailwind, Nuxt, Typescript,
+WebSocket, GraphQL, TanStack Query, Web Extensions, Crypto,
+Node.js (Fastify, Express)
 
-Azat Kashapov
-<script src="js/main.js"></script>
-</body>
-
+If you have questions, pls text me https://t.me/ufaboy
+or https://www.linkedin.com/in/azat-kashapov/
+Have a nice day!
+*******************************************************`, style)
+    </script>
+  </body>
 </html>
