--- a/en/index.html
+++ b/en/index.html
@@ -6,10 +6,14 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://ufaboy.github.io" />
+    <meta property="og:image" content="https://ufaboy.github.io/img//avatar.png"/>
+    <meta property="og:description" content="Experienced Frontend developer specializing in Vue and Nuxt."/>
+    <meta property="og:locale" content="en_EN" />
+    <meta property="profile:first_name" content="Azat" />
+    <meta property="profile:last_name" content="Kashapov" />
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
@@ -25,15 +29,13 @@
       <section class="bio">
         <div class="profile">
           <img
-            src="/img//avatar.png"
+            src="/img/avatar.png"
             alt="Azat's Photo"
             class="profile-photo"
           />
           <div>
             <h2 class="name">Azat Kashapov</h2>
-            <div class="position">Software Engineer
-              <img src="../github.svg" alt="" width="24" height="24">
-            </div>
+            <div class="position">Software Engineer</div>
           </div>
         </div>
         <hr />
@@ -181,11 +183,11 @@
           <div class="job-description">
             Front: Based on legacy (Jquery, without ES5 features), and other
             references, I made a SPA email constructor-editor. Written in Vue2,
-            Vuetify, considering future migration to Vue3.<br>
-            Back: For 1/3 of
-            tasks I write REST API on Yii2, for the remaining 2/3 I participate
-            more with consultations, advice, code reviews and ideas. In general,
-            the usual API, with local nuances, but without any special problems.
+            Vuetify, considering future migration to Vue3.<br />
+            Back: For 1/3 of tasks I write REST API on Yii2, for the remaining
+            2/3 I participate more with consultations, advice, code reviews and
+            ideas. In general, the usual API, with local nuances, but without
+            any special problems.
           </div>
         </div>
         <hr class="hr" />
@@ -225,12 +227,11 @@
             of new ones, refactoring of both your own and someone else's code.
             The difficulties are mostly in a huge code base, a complex hierarchy
             of entities, well, you can say highload. Decision performance was
-            very important<br>
-            CRM development for lr-service.su. Something like
-            "UBER" for masters of repair and installation of equipment Wrote the
-            entire front in Nuxt, and most of the back end in Yii2. The back is
-            generally a simple REST API, but there were non-trivial and
-            interesting tasks.
+            very important<br />
+            CRM development for lr-service.su. Something like "UBER" for masters
+            of repair and installation of equipment Wrote the entire front in
+            Nuxt, and most of the back end in Yii2. The back is generally a
+            simple REST API, but there were non-trivial and interesting tasks.
           </div>
         </div>
         <hr class="hr" />
@@ -277,7 +278,8 @@
     <script src="../js/main.js"></script>
     <script>
       const style = 'font-size:16px;';
-      console.log(`
+      console.log(
+        `
 %c*******************************************************
 Hi,I am Azat Kashapov. Frontend Developer.
 
@@ -288,7 +290,9 @@ Node.js (Fastify, Express)
 If you have questions, pls text me https://t.me/ufaboy
 or https://www.linkedin.com/in/azat-kashapov/
 Have a nice day!
-*******************************************************`, style)
+*******************************************************`,
+        style
+      );
     </script>
   </body>
 </html>
