--- a/ru/index.html
+++ b/ru/index.html
@@ -2,14 +2,18 @@
 <html class="" lang="en" itemtype="https://schema.org/Person">
   <head>
     <meta charset="utf-8" />
-    <title>Azat Kashapov</title>
+    <title>Азат Кашапов</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Азат Кашапов - Frontend Engineer" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://ufaboy.github.io" />
+    <meta property="og:image" content="https://ufaboy.github.io/img/avatar.png"/>
+    <meta property="og:description" content="Опытный Frontend разработчик, специализирующийся на Vue и Nuxt."/>
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="profile:first_name" content="Азат" />
+    <meta property="profile:last_name" content="Кашапов" />
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
@@ -25,7 +29,7 @@
       <section class="bio">
         <div class="profile">
           <img
-            src="/img//avatar.png"
+            src="/img/avatar.png"
             alt="Azat's Photo"
             class="profile-photo"
           />
