--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-
+  <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
+  <meta property="og:type" content="profile" />
+  <meta property="og:url" content="https://ufaboy.github.io" />
+  <meta property="og:image" content="https://ufaboy.github.io/img//avatar.png"/>
+  <meta property="og:description" content="Experienced Frontend developer specializing in Vue and Nuxt."/>
+  <meta property="og:locale" content="en_EN" />
+  <meta property="profile:first_name" content="Azat" />
+  <meta property="profile:last_name" content="Kashapov" />
   <link rel="stylesheet" href="css/main.css">
-
   <meta name="theme-color" content="#fafafa">
 </head>
 
